data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1343.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\91\80\80\80\00\01\03\65\6e\76\09\73\6f"
    "\6d\65\5f\66\75\6e\63\00\00\03\82\80\80\80\00\01"
    "\00\0a\8c\80\80\80\00\01\86\80\80\80\00\00\10\00"
    "\0c\00\0b"
  )
""
)